# sql

./: .travis.yml  CMakeLists.txt  README.md  config.hpp.in
cmake/: list_has_emplace.cxx
cmake/modules/: FindSqlite3.cmake
include/sql/: sql.hpp
include/sql/dialect/sqlite/detail/: dialect.hpp  query.hpp
include/sql/impl/: collection.hpp  database.hpp  field.hpp  session.hpp  transaction.hpp
include/sql/interface/: interface.hpp
include/sql/interface/detail/: binder.hpp  dialect.hpp  field.hpp  generic_binder.hpp  null.hpp  query.hpp  table.hpp
include/sql/operator/: operator.hpp
include/sql/operator/aux/: nest.hpp  value_wrapper.hpp
include/sql/operator/detail/: and.hpp  eq.hpp  field.hpp  gt.hpp  or.hpp  plus.hpp  value.hpp
include/sql/query/: all_expr.hpp  count_expr.hpp  expr_wrapper.hpp  limit_expr.hpp  query_wrapper.hpp
include/sql/utils/: raii_destructor.hpp  url.hpp
src/: CMakeLists.txt
src/dialect/sqlite/: dialect.cxx  query.cxx
src/impl/: database.cxx  session.cxx
src/interface/: query.cxx  table.cxx
src/utils/: url.cxx
tests/: CMakeLists.txt
tests/expressions/: CMakeLists.txt  expressions.cxx
tests/query/: CMakeLists.txt  query.cxx
tests/sqlite/: sqlite.cxx
tests/transaction/: CMakeLists.txt  transaction.cxx
