CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (sql)
SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

TRY_COMPILE (STD_LIST_HAS_EMPLACE
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/cmake/list_has_emplace.cxx)

MESSAGE (STATUS "std::list has emplace: ${STD_LIST_HAS_EMPLACE}")

CONFIGURE_FILE ("${CMAKE_CURRENT_SOURCE_DIR}/config.hpp.in"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/sql/config.hpp")

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY (src)

ENABLE_TESTING ()
ADD_SUBDIRECTORY (tests)
